fix: code cleanup + error writing text

--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -132,6 +132,18 @@
                 app:layout_constraintStart_toStartOf="@+id/guide_pole_left_end"
                 app:layout_constraintTop_toTopOf="@+id/guide_pole_top" />
 
+            <Button
+                android:id="@+id/btn_createUserAndGotoCity"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="#00000000"
+                android:onClick="@{() -> welcomeViewModel.gotoCityButtonClicked()}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guide_form_start"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guide_userName" />
+
+
             <EditText
                 android:id="@+id/txt_welcome_userName"
                 android:layout_width="0dp"
