--- a/app/src/main/res/layout/fragment_edit_detail.xml
+++ b/app/src/main/res/layout/fragment_edit_detail.xml
@@ -51,7 +51,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@color/colorAccent"
-            android:src="@drawable/ic_baseline_chevron_left_24px"
+            app:srcCompat="@drawable/ic_baseline_chevron_left_24px"
             app:altSrc="@drawable/ic_baseline_chevron_right_24px"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,7 @@
             android:layout_marginBottom="8dp"
             android:elevation="2dp"
             android:onClick="@{() -> editdetailViewModel.onGoToEmotionAvatarButtonClicked()}"
-            android:src="@drawable/ic_baseline_edit_24px"
+            app:srcCompat="@drawable/ic_baseline_edit_24px"
             app:layout_constraintBottom_toBottomOf="@id/image_editDetail_avatar"
             app:layout_constraintStart_toStartOf="@id/image_editDetail_avatar" />
 
