--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -144,7 +144,7 @@
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/description_addDrawing"
                 android:onClick="@{() -> eventViewModel.onDrawingButtonClicked()}"
-                android:src="@drawable/event_detail_drawing"
+                app:srcCompat="@drawable/event_detail_drawing"
                 app:layout_constraintBottom_toTopOf="@+id/guide_middle_horizontal_pole"
                 app:layout_constraintEnd_toStartOf="@+id/guide_right_pole"
                 app:layout_constraintStart_toStartOf="@+id/guide_middle_vertical_pole"
