fix: fix ktlint issues

--- a/app/src/main/res/layout/fragment_take_photo.xml
+++ b/app/src/main/res/layout/fragment_take_photo.xml
@@ -60,7 +60,7 @@
             android:contentDescription="@string/ok"
             android:layout_margin="8dp"
             android:onClick="@{() -> photoViewModel.onOkPhotoButtonClicked()}"
-            android:src="@drawable/ic_outline_thumb_up"
+            app:srcCompat="@drawable/ic_outline_thumb_up"
             android:text="@string/frag_takePhoto_takePhoto"
             android:tint="@color/colorPrimary"
             android:visibility="@{safeUnbox(photoViewModel.visibilityPhotoTakenNotSaved)}"
@@ -74,7 +74,7 @@
             android:layout_margin="8dp"
             android:contentDescription="@string/cancel"
             android:onClick="@{() -> photoViewModel.onNotOkPhotoButtonClicked()}"
-            android:src="@drawable/ic_outline_thumb_down"
+            app:srcCompat="@drawable/ic_outline_thumb_down"
             android:tint="@color/colorAccent"
             android:visibility="@{safeUnbox(photoViewModel.visibilityPhotoTakenNotSaved)}"
             app:layout_constraintBottom_toBottomOf="parent"
