--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -13,6 +13,7 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/screen_draw"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
