--- a/app/src/main/res/layout/avatar_rv_item.xml
+++ b/app/src/main/res/layout/avatar_rv_item.xml
@@ -9,15 +9,15 @@
 
     <ImageView
         android:id="@+id/avatar_list_image"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="300dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:contentDescription="@string/description_thumbnail"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
