--- a/app/src/main/res/layout/fragment_take_photo.xml
+++ b/app/src/main/res/layout/fragment_take_photo.xml
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="0dp"
-            android:contentDescription="@string/takePhoto_neem_foto" android:visibility="@{safeUnbox(photoViewModel.visibilityPhotoTakenOrSaved)}"
+            android:visibility="@{safeUnbox(photoViewModel.visibilityPhotoTakenOrSaved)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,6 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             android:layout_margin="8dp"
-            android:contentDescription="@string/takePhoto_neem_foto"
             android:onClick="@{() -> photoViewModel.onTakePhotoButtonClicked()}"
             android:text="@string/frag_takePhoto_takePhoto"
             android:visibility="@{safeUnbox(photoViewModel.visibilityTakePhoto)}"
