--- a/app/src/main/res/layout/fragment_draw_avatar.xml
+++ b/app/src/main/res/layout/fragment_draw_avatar.xml
@@ -18,9 +18,9 @@
         android:id="@+id/screen_draw_avatar">
     <!--ACHTERGROND-->
     <ImageView
-        android:id="@+id/background_draw_avatar_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/draw_emotion"
         android:contentDescription="@string/tekenen" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
