--- a/app/src/main/res/layout/fragment_edit_detail.xml
+++ b/app/src/main/res/layout/fragment_edit_detail.xml
@@ -31,7 +31,6 @@
             android:scaleType="fitXY"
             android:adjustViewBounds="true"
             android:src="@drawable/btn_send"
-            android:contentDescription="@string/send"
             android:onClick="@{() -> editdetailViewModel.onSendButtonClicked()}"
             app:layout_constraintEnd_toStartOf="@+id/image_editDetail_avatar"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +39,7 @@
             android:id="@+id/image_editDetail_avatar"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:contentDescription="@string/edit_detail" android:scaleType="centerCrop"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:src="@drawable/avatar"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -73,7 +72,7 @@
             android:layout_height="70dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
-            android:contentDescription="@string/emotion_avatar"  android:elevation="2dp"
+            android:elevation="2dp"
             android:onClick="@{() -> editdetailViewModel.onGoToEmotionAvatarButtonClicked()}"
             app:srcCompat="@drawable/ic_baseline_edit_24px"
             app:layout_constraintBottom_toBottomOf="@id/image_editDetail_avatar"
