--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -72,28 +72,19 @@
                 app:layout_constraintGuide_percent="0.68" />
 
 
-            <TextView
-                android:id="@+id/label_event_details_title"
-                style="@style/Base.TextAppearance.AppCompat.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:text="@string/event_details_title"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <EditText
                 android:id="@+id/txt_event_details_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:hint="@string/event_details_title"
                 android:inputType="text"
                 android:text="@={eventViewModel.eventTitle}"
-                app:layout_constraintBaseline_toBaselineOf="@id/label_event_details_title"
-                app:layout_constraintStart_toEndOf="@id/label_event_details_title"
-                tools:text="Titel van de gebeurtenis"
-                android:hint="Titel van de gebeurtenis"
-                />
+                app:layout_constraintBottom_toTopOf="@+id/guide_avatar_titel_bottom"
+                app:layout_constraintStart_toStartOf="@+id/guide_avatar_titel_left"
+                tools:text="@string/event_details_title" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/event_details_upperDivider"
@@ -165,6 +156,7 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.78" />
 
+            <!--
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_event_details_details"
                 android:layout_width="0dp"
@@ -178,6 +170,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/guide_horizontal_details"
                 app:layout_constraintVertical_bias="0.806" />
+                -->
 
             <!--ImageButton
                 android:id="@+id/btn_event_send"
@@ -256,6 +249,21 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.82" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guide_avatar_titel_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="366dp"
+                app:layout_constraintGuide_percent="0.50" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guide_avatar_titel_bottom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.16" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_avatar_inkleuren_bottom"
