--- a/app/src/main/res/layout/fragment_register_userinfo.xml
+++ b/app/src/main/res/layout/fragment_register_userinfo.xml
@@ -109,6 +109,7 @@
                 android:layout_height="wrap_content"
                 android:background="#00000000"
                 android:hint="Kies een wachtwoord"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:inputType="textPassword"
                 android:text="@={registerUserInfoViewModel.password}"
                 app:layout_constraintBottom_toTopOf="@+id/guide_password_bottom"
