--- a/app/src/main/res/layout/panel_drawing_tools.xml
+++ b/app/src/main/res/layout/panel_drawing_tools.xml
@@ -42,7 +42,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
-                    android:background="@{drawViewModel.selectedColor==Color.BLACK ? @drawable/background : @drawable/background_noborder}"
+                    android:background="@{((int)drawViewModel.selectedColor)==Color.BLACK ? @drawable/background : @drawable/background_noborder}"
                     android:contentDescription="@string/choose_black"
                     android:onClick="@{() -> drawViewModel.pickColor(Color.BLACK)}"
                     android:padding="5dp"
@@ -56,7 +56,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
-                    android:background="@{drawViewModel.selectedColor==Color.BLUE ? @drawable/background : @drawable/background_noborder}"
+                    android:background="@{((int)drawViewModel.selectedColor)==Color.BLUE ? @drawable/background : @drawable/background_noborder}"
                     android:contentDescription="@string/choose_blue"
                     android:onClick="@{() -> drawViewModel.pickColor(Color.BLUE)}"
                     android:padding="5dp"
@@ -70,7 +70,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
-                    android:background="@{drawViewModel.selectedColor==Color.RED ? @drawable/background : @drawable/background_noborder }"
+                    android:background="@{((int)drawViewModel.selectedColor)==Color.RED ? @drawable/background : @drawable/background_noborder }"
                     android:contentDescription="@string/choose_red"
                     android:onClick="@{() -> drawViewModel.pickColor(Color.RED)}"
                     android:padding="5dp"
@@ -84,7 +84,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
-                    android:background="@{drawViewModel.selectedColor==Color.YELLOW ? @drawable/background : @drawable/background_noborder }"
+                    android:background="@{((int)drawViewModel.selectedColor)==Color.YELLOW ? @drawable/background : @drawable/background_noborder }"
                     android:contentDescription="@string/choose_yellow"
                     android:onClick="@{() -> drawViewModel.pickColor(Color.YELLOW)}"
                     android:padding="5dp"
@@ -98,7 +98,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
-                    android:background="@{drawViewModel.selectedColor==Color.GREEN ? @drawable/background : @drawable/background_noborder}"
+                    android:background="@{((int)drawViewModel.selectedColor)==Color.GREEN ? @drawable/background : @drawable/background_noborder}"
                     android:contentDescription="@string/choose_green"
                     android:onClick="@{() -> drawViewModel.pickColor(Color.GREEN)}"
                     android:padding="5dp"
