--- a/app/src/main/res/layout/fragment_register_avatar.xml
+++ b/app/src/main/res/layout/fragment_register_avatar.xml
@@ -4,15 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
-        <variable
-            name="registerUserInfoViewModel"
-            type="be.hogent.faith.faith.loginOrRegister.registerUserInfo.RegisterUserInfoViewModel" />
-
-        <variable
-            name="registerUserViewModel"
-            type="be.hogent.faith.faith.loginOrRegister.RegisterUserViewModel" />
-
         <variable
             name="registerAvatarViewModel"
             type="be.hogent.faith.faith.loginOrRegister.registerAvatar.RegisterAvatarViewModel" />
@@ -91,7 +82,7 @@
                 android:id="@+id/btn_register_finishRegistration"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:onClick="@{() -> registerUserViewModel.onFinishRegistrationClicked()}"
+                android:onClick="@{() -> registerAvatarViewModel.onFinishRegistrationClicked()}"
                 app:layout_constraintBottom_toTopOf="@+id/guide_city_bottom"
                 app:layout_constraintEnd_toStartOf="@+id/guide_city_end"
                 app:layout_constraintStart_toStartOf="@+id/guide_city_start"
